// Vitest Snapshot v1

exports[`diffPackageJson > Empty package.json > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "main",
    "to": "dist/index.cjs",
  },
  {
    "from": undefined,
    "key": "module",
    "to": "dist/index.mjs",
  },
  {
    "additions": [
      "/dist",
      "/css",
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > Empty package.json > expectedPackageJson 1`] = `
{
  "exports": {
    ".": {
      "import": {
        "default": "./dist/index.mjs",
        "types": "./dist/index.cjs.d.ts",
      },
      "require": {
        "default": "./dist/index.cjs",
        "types": "./dist/index.cjs.d.ts",
      },
    },
    "./css": {
      "import": {
        "default": "./css/index.mjs",
        "types": "./css/index.cjs.d.ts",
      },
      "require": {
        "default": "./css/index.cjs",
        "types": "./css/index.cjs.d.ts",
      },
    },
    "./package.json": "./package.json",
    "./themes/apac": {
      "import": {
        "default": "./themes/apac/index.mjs",
        "types": "./themes/apac/index.cjs.d.ts",
      },
      "require": {
        "default": "./themes/apac/index.cjs",
        "types": "./themes/apac/index.cjs.d.ts",
      },
    },
  },
  "files": [
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "main": "dist/index.cjs",
  "module": "dist/index.mjs",
}
`;

exports[`diffPackageJson > Incorrect package.json > diffs 1`] = `
[
  {
    "from": "dist/index.esm",
    "key": "module",
    "to": "dist/index.mjs",
  },
  {
    "additions": [
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > Incorrect package.json > expectedPackageJson 1`] = `
{
  "exports": {
    ".": {
      "import": {
        "default": "./dist/index.mjs",
        "types": "./dist/index.cjs.d.ts",
      },
      "require": {
        "default": "./dist/index.cjs",
        "types": "./dist/index.cjs.d.ts",
      },
    },
    "./css": {
      "import": {
        "default": "./css/index.mjs",
        "types": "./css/index.cjs.d.ts",
      },
      "require": {
        "default": "./css/index.cjs",
        "types": "./css/index.cjs.d.ts",
      },
    },
    "./package.json": "./package.json",
    "./themes/apac": {
      "import": {
        "default": "./themes/apac/index.mjs",
        "types": "./themes/apac/index.cjs.d.ts",
      },
      "require": {
        "default": "./themes/apac/index.cjs",
        "types": "./themes/apac/index.cjs.d.ts",
      },
    },
  },
  "files": [
    "/apac",
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "main": "dist/index.cjs",
  "module": "dist/index.mjs",
}
`;
